Centered printable surface, created print button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="sidemenu">
             <button class="addfield" onclick="openForm()">Add field</button>
             <button class="button2">Add random</button>
+            <button class="printbutton" onclick="window.print()">Print</button>
         </div>
         <div class="formarea">
             <div class="title" contenteditable="true">
