--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="AddFieldPopup">
                 <div class="formPopup" id="popupForm">
-                    <form action="/action_page.php" class="formContainer">
+                    <form action="#" onsubmit="addField()" class="formContainer">
                         <h2>Please enter the field name</h2>
                         <label for="field">
                             <strong>Field</strong>
