--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>FormBuilder</title>
 </head>
 
@@ -19,7 +20,7 @@
         </div>
         <div class="formarea">
             <div class="title" contenteditable="true">
-                <h1>Insert title here</h1> 
+                <h1>Click here to change this title</h1> 
             </div>
             <div class="AddFieldPopup">
                 <div class="formPopup" id="popupForm">
