--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    
     <link rel="stylesheet" href="style.css">
     <title>FormBuilder</title>
 </head>
@@ -48,7 +48,7 @@
             </div>
             <div class="AddFieldPopup">
                 <div class="formPopup" id="popupForm">
-                    <form action="#" onsubmit="addField()" class="formContainer">
+                    <div onsubmit="addField()" class="formContainer">
                         <h2>Please enter the field name</h2>
                         <label for="field">
                             <strong>Field</strong>
@@ -56,10 +56,11 @@
                         <input type="text" id="field" placeholder="Your field name" name="field" required>
                         <button type="button" class="btn" onclick="addField()">Add field</button>
                         <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
+        <script src="script.js"></script>
 </body>
 
 </html>
